# wavetables-experiment

./: CMakeLists.txt
src/: main.cpp  waveview.cpp  waveview.h  window.ui
